# openjpeg_ffi

./: README.md  ffigen.yaml  flake.nix  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/openjpeg_ffi_example/: MainActivity.kt
example/assets/: image.j2k
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: openjpeg_ffi.podspec
ios/Classes/: openjpeg_ffi.c
lib/: openjpeg_ffi.dart  openjpeg_ffi_bindings_generated.dart
nix/: android.nix
src/: CMakeLists.txt  openjpeg_ffi.c  openjpeg_ffi.h
